# duck-read-cache-fs

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  extension_config.cmake  winbuild.ps1
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.skills/duckdb-extension-upgrade/: SKILL.md
benchmark/: README.md  lineitem_sequential_read.cpp  random_read_benchmark.cpp  read_s3_object.cpp  sequential_read_benchmark.cpp
doc/: example_usage.md  performance_troubleshooting_notes.md
example/: example_usage.md
src/: base_cache_filesystem.cpp  base_profile_collector.cpp  cache_entry_info.cpp  cache_exclusion_manager.cpp  cache_exclusion_utils.cpp  cache_filesystem.cpp  cache_filesystem_config.cpp  cache_httpfs_extension.cpp  cache_httpfs_extension_callback.cpp  cache_httpfs_instance_state.cpp  cache_read_chunk.cpp  cache_reader_manager.cpp  cache_status_query_function.cpp  cache_type.cpp  cache_validation.cpp  disk_cache_filesystem.cpp  disk_cache_reader.cpp  disk_cache_util.cpp  extension_bounded_data_cache_storage.cpp  extension_config_query_function.cpp  filesystem_status_query_function.cpp  histogram.cpp  in_mem_cache_block.cpp  in_mem_cache_remap.cpp  in_memory_cache_filesystem.cpp  in_memory_cache_reader.cpp  in_memory_data_cache_storage.cpp  io_operations.cpp  noop_cache_reader.cpp  noop_profile_collector.cpp  object_cache_data_cache_storage.cpp  profile_collector_manager.cpp  read_cache_fs_extension.cpp  temp_profile_collector.cpp
src/include/: base_cache_reader.hpp  base_profile_collector.hpp  cache_entry_info.hpp  cache_exclusion_manager.hpp  cache_exclusion_utils.hpp  cache_filesystem.hpp  cache_filesystem_config.hpp  cache_filesystem_logger.hpp  cache_httpfs_extension.hpp  cache_httpfs_extension_callback.hpp  cache_httpfs_instance_state.hpp  cache_read_chunk.hpp  cache_reader_manager.hpp  cache_status_query_function.hpp  cache_type.hpp  cache_validation.hpp  disk_cache_filesystem.hpp  disk_cache_reader.hpp  disk_cache_util.hpp  extension_bounded_data_cache_storage.hpp  extension_config_query_function.hpp  histogram.hpp  in_mem_cache_block.hpp  in_mem_cache_data_entry.hpp  in_mem_cache_remap.hpp  in_memory_cache_reader.hpp  in_memory_data_cache_manager.hpp  in_memory_data_cache_storage.hpp  io_operations.hpp  lru_data_cache_manager.hpp  noop_cache_reader.hpp  noop_profile_collector.hpp  object_cache_data_cache_storage.hpp  profile_collector_manager.hpp  temp_profile_collector.hpp
src/utils/: chunk_utils.cpp  duckdb_task_parallel_executor.cpp  fake_filesystem.cpp  filesystem_utils.cpp  hash_utils.cpp  mock_filesystem.cpp  page_aligned_data_chunk.cpp  string_utils.cpp  test_constants.cpp  test_utils.cpp  thread_pool.cpp  thread_pool_parallel_executor.cpp  thread_utils.cpp  time_utils.cpp  url_utils.cpp
stress_test/: CMakeLists.txt  README.md  build.sh  main.cpp  run_stress_test.sh
test/data/: attach_test.db
test/sql/: attach_db.test  cache_access_info.test  cache_block_size.test  cache_clear_latency.test  cache_exclusion.test  cache_key_query_param.test  cache_profile.test  clear_cache.test  clear_cache_on_write_policy.test  compressed_file.test  disable_external_access.test  disable_memory_cache_for_disk_cache.test  disk_cache_filesystem.test  disk_cache_filesystem_object_cache.test  disk_cache_filesystem_with_multi_cache_dir.test  extension.test  extension_config.test  external_file_cache.test  glob_read.test  inmem_cache_filesystem.test  inmem_cache_filesystem_object_cache.test  insufficient_disk_space.test  invalid_extension_config.test  issue_393.test  issue_412.test  issue_418.test  logging.test  max_subrequest_fanout.test  memory_cache_for_disk_cache.test  noop_cache_filesystem.test  (+3 more)
test/unittest/: CMakeLists.txt  test_base_cache_filesystem_from_unit.cpp  test_cache_exclusion_manager.cpp  test_cache_filesystem_from_unit.cpp  test_cache_filesystem_with_mock.cpp  test_cache_stats_collection_from_unit.cpp  test_chunk_utils.cpp  test_clear_cache_on_delete.cpp  test_clear_cache_on_write.cpp  test_connection_cleanup.cpp  test_connection_cleanup_from_unit.cpp  test_copiable_value_lru_cache.cpp  test_counter.cpp  test_data_cache_remap.cpp  test_disk_cache_filesystem_from_unit.cpp  test_disk_cache_remap.cpp  test_disk_cache_util.cpp  test_disk_cache_validation_from_unit.cpp  test_disk_cache_with_multi_directories_from_unit.cpp  test_exclusive_lru_cache.cpp  test_exclusive_multi_lru_cache.cpp  test_filesystem_config_from_unit.cpp  test_filesystem_utils_from_unit.cpp  test_histogram.cpp  test_in_memory_cache_filesystem_from_unit.cpp  test_io_operation_latency.cpp  test_large_file_disk_reader_from_unit.cpp  test_large_file_inmem_reader_from_unit.cpp  test_latency_guard.cpp  test_max_fanout_subrequest.cpp  test_multi_duckdb_instance_from_unit.cpp  test_noop_cache_reader_from_unit.cpp  test_object_cache_data_storage.cpp  test_optional.cpp  test_oversized_cache_filepath.cpp  test_page_aligned_data_chunk.cpp  test_profile_collector_set.cpp  test_read_exception_propagation.cpp  test_remove_files_batch.cpp  test_scoped_directory.cpp  (+10 more)
unit/: duckdb_read_behavior.cpp  test_base_cache_filesystem.cpp  test_cache_exclusion_manager.cpp  test_cache_filesystem.cpp  test_cache_filesystem_with_mock.cpp  test_cache_stats_collection.cpp  test_chunk_utils.cpp  test_clear_cache_on_write.cpp  test_clear_cache_on_write_policy.cpp  test_copiable_value_lru_cache.cpp  test_counter.cpp  test_disk_cache_filesystem.cpp  test_disk_cache_validation.cpp  test_disk_cache_with_multi_directories.cpp  test_exclusive_lru_cache.cpp  test_exclusive_multi_lru_cache.cpp  test_filesystem_config.cpp  test_filesystem_utils.cpp  test_in_memory_cache_filesystem.cpp  test_io_operation_latency.cpp  test_large_file_disk_reader.cpp  test_large_file_inmem_reader.cpp  test_max_fanout_subrequest.cpp  test_multi_duckdb_instance.cpp  test_no_destructor.cpp  test_noop_cache_reader.cpp  test_optional.cpp  test_read_exception_propagation.cpp  test_scoped_directory.cpp  test_set_extension_config.cpp  test_shared_lru_cache.cpp  test_string_utils.cpp
(+33 files in other folders)
